--- a/css/bienvenida.css
+++ b/css/bienvenida.css
@@ -6,29 +6,32 @@
     box-sizing: border-box; }
   
   body {
-    background: black;
-    /* font-family: sans-serif; */
+    background-image: url(https://www.eluniversal.com.mx/sites/default/files/2020/04/02/hogwarts.jpg);
+    background-attachment: fixed;
+    background-size: cover;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 1.5; }
 
     .contenedor {
         width: 95%;
-        margin: 10px auto;
-        padding: 20px 40px;
-        background-color:chocolate;
+        margin: 20px auto;
+        padding: 20px 30px;
+        background-color:rgba(210, 105, 30, 0.8);
         display: flex;
         flex-direction: column;
         justify-content: center;
     }
     h1 {
+        font-size: 1.7em;
         text-align: center;
+        margin-bottom: 20px;
         animation: ease texto 3.5s;
     }
     .contenedor img {
-        width: 50%;
-        height: 50%;
-        border-radius: 50%;
+        width: 300px;
+        height: 180px;
+        border-radius: 10%;
         display: flex;
         background-color: burlywood;
         margin: 30px auto;
@@ -50,6 +53,8 @@
         transform: scale(1.1);
     } */
     .contenedor p {
+        margin-bottom: 15px;
+        text-align: center;
         animation: ease texto 5s;
     }
 
