--- a/css/bienvenida.css
+++ b/css/bienvenida.css
@@ -6,18 +6,19 @@
     box-sizing: border-box; }
   
   body {
-    background-image: url(https://www.eluniversal.com.mx/sites/default/files/2020/04/02/hogwarts.jpg);
+    background-image: url("https://static.posters.cz/image/750/poster/harry-potter-hogwarts-boats-i74249.jpg");
     background-attachment: fixed;
     background-size: cover;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 20px;
+    font-family: 'Akaya Kanadaka', cursive;
+    font-size: 18px;
     line-height: 1.5; }
 
     .contenedor {
         width: 95%;
         margin: 20px auto;
         padding: 20px 30px;
-        background-color:rgba(210, 105, 30, 0.8);
+        color: white;
+        background-color:rgba(0, 0, 0, 0.8);
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -29,11 +30,11 @@
         animation: ease texto 3.5s;
     }
     .contenedor img {
-        width: 300px;
+        width: 90%;
         height: 180px;
         border-radius: 10%;
         display: flex;
-        background-color: burlywood;
+        /* background-color: burlywood; */
         margin: 30px auto;
         margin-bottom: 50px;
         border: solid whitesmoke 2px;
@@ -43,7 +44,8 @@
         text-decoration: none;
         background-color: black;
         color: whitesmoke;
-        padding: 5px 5px;
+        padding: 10px;
+        border: 1px solid white;
         margin: 30px auto;
         border-radius: 10px;
         width: min-content;
@@ -58,28 +60,35 @@
         animation: ease texto 5s;
     }
 
-@media screen and (min-width: 600px) {
+    /* MEDIA QUERY */
+
+@media screen and (min-width: 500px) {
     .contenedor {
         font-size: 1.2em;
         margin: 20px auto;
     }
     .contenedor img {
-        width: 35%;
+        width: 55%;
     }
 }
 
-/* MEDIA QUERY */
-
-@media screen and (min-width: 850px) {
+@media screen and (min-width: 768px) {
     .contenedor {
-        width: 98%;
-        font-size: 1.3em;
+        width: 90%;
+        font-size: 1.2em;
         margin: 20px auto;
         padding: 20px 80px;
     }
     .contenedor img {
-        width: 20%;
+        width: 45%;
     }
+}
+@media screen and (min-width: 960px) {
+    .contenedor {
+        max-width: 800px;
+        font-size: 1em;
+    }
+
 }
 
 
